@@ -3,11 +3,9 @@ package br.com.am.rest;
 import br.com.am.entidades.Binario;
 import br.com.am.erros.UsuarioNaoAchadoExection;
 import br.com.am.util.HibernateUtil;
-import org.apache.commons.io.IOUtils;
 import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
 import org.glassfish.jersey.media.multipart.FormDataParam;
 import org.hibernate.Session;
-import org.hibernate.criterion.Restrictions;
 
 import javax.imageio.ImageIO;
 import javax.ws.rs.*;
@@ -37,7 +35,7 @@ public class BinarioApp extends RestApp {
 				return Response.status(401).entity("Token inválido")
 						.type(MediaType.APPLICATION_JSON).build();
 			}
-			byte[] byteArray = IOUtils.toByteArray(uploadedInputStream);
+			byte[] byteArray = uploadedInputStream.readAllBytes();
 
 			BufferedImage original = createImageFromBytes(byteArray);
 			if (original.getWidth() * original.getHeight() > 160000) {
@@ -92,8 +90,9 @@ public class BinarioApp extends RestApp {
 			throws IOException {
 		Session session = HibernateUtil.getSession();
 		try {
-			List<Binario> list = session.createCriteria(Binario.class)
-					.add(Restrictions.eq("id", new Long(id))).list();
+			List<Binario> list = session.createQuery(
+					"FROM Binario WHERE id = :id", Binario.class)
+					.setParameter("id", Long.parseLong(id)).getResultList();
 			if (list.isEmpty()) {
 				return Response.status(400).entity("imágem não encontrada")
 						.type(MediaType.APPLICATION_JSON).build();
